# afk_parser

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: test.yaml
afk_parser/: __init__.py  afk_parser.py
afk_parser/lib/: extended_datetime.py  relativedelta.py
afk_parser/tests/: test_afk_parser.py
lib/: afk_parser.py  extended_datetime.py  relativedelta.py
tests/lib/: test_afk_parser.py
